# UniversityProjects

./: .gitignore  Buffer.c  Buffer.h  CMakeLists.txt  CacheManager.c  CacheManager.h  ClientHandlers.c  ClientHandlers.h  Converter.h  DetailedGame.h  Game.h  Interface.cpp  Interface.h  Poller.cpp  Poller.h  README.md  ServerHandlers.c  ServerHandlers.h  SocketInfo.c  SocketInfo.h  TestTask.h  ThreadData.h  ThreadsStorage.c  ThreadsStorage.h  TournamentGame.cpp  TournamentGame.h  Utils.cpp  Utils.h  build.gradle  config.php  header.h  index.php  init.sql  main.c  main.cpp  pom.xml  s_tree.html  utils.c  utils.h
AIs/: AIAngry.cpp  AIAngry.h  AIPiBot.cpp  AIPiBot.h  AIRand.cpp  AIRand.h  AISlave.cpp  AISmartAngry.cpp  AISmartAngry.h  AITitForTat.cpp
Batalin.Nsudotnet.Calendar/: Calendar.csproj  Calendar.sln  Program.cs
Batalin.Nsudotnet.Enigma/: Batalin.Nsudotnet.Enigma.csproj  Batalin.Nsudotnet.Enigma.sln  Crypto.cs
Batalin.Nsudotnet.LinesCounter/: Batalin.Nsudotnet.LinesCounter.csproj
Batalin.Nsudotnet.NumberGuesser/: AttemptsHistory.cs  Program.cs
Filter/: FIT_14205_Batalin_Kirill_Filter_About.txt  pom.xml
Life/: FIT_14205_Batalin_Kirill_Life_About.txt
ai_configs/: PiBot.txt
ant/: build.xml
controllers/: Controller.php  HardWayController.php  IndexController.php  LoginController.php  ShopController.php  TaskController.php  TeamController.php  UserController.php
cpp-dilemma/: DetailedGame.cpp  Factory.h  FastGame.cpp  FastGame.h  Game.cpp  Register.h  config.txt  main.cpp
css/: bootstrap.min.css  main.css
db-oracle-client/: README.md
files/: attach1.docx  attach2.txt  libraryofbabel.txt
js/: main.js
models/: Department.php  (+9 more)
os-proxy/: CMakeLists.txt  CacheManager.c  ClientHandlers.c  SocketInfo.c  SocketInfo.h  SocketsStorage.c  SocketsStorage.h  main.c  utils.h
(+525 files in other folders)
